--- a/style.css
+++ b/style.css
@@ -178,14 +178,14 @@ main {
 }
 
 header {
-	
+	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	line-height: 1.2;
 	max-width: 100%;
 	padding-top: 3vw;
-	padding-right: 15em;
-	padding-left: 15em;
+	padding-right: 1em;
+	padding-left: 1em;
 	padding-bottom: 3vw;
 	text-align: center;
 	background-image: url(images/resume.jpg);
